Fix extension window being too small

--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -8,13 +8,10 @@ body {
   flex-direction: column;
   margin: 10px;
   align-items: center;
+  min-width: 200px;
+  height: 300px;
 }
 
 h3 {
   margin: 0;
-}
-
-#repos {
-  min-width: 200px;
-  height: 300px;
 }
